src/index.css
@import "tailwindcss";
@import url("https://fonts.googleapis.com/css2?family=Idiqlat:wght@200;300;400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");


.kaagitham{
    font-family: "poppins",sans-serif;
    font-size: medium;
}

@theme {
  --font-primary: "Poppins", sans-serif;
  --font-heading: "Playfair Display", serif;
  --font-mono: "Fira Code", monospace;
}
:root {
  --color-primary: #0d0d0d; /* Dark Background */
  --color-black: #000000; /* Pure Black */
  --color-gold: #dea107; /* Brand Gold */
  --color-gold-soft: #ffd369; /* Light Gold Accent */
  --color-gray-light: #b3b3b3; /* Paragraph Text */
  --color-border: #1a1a1a; /* Border Color */
}

